--- a/BaiTapBuoi14/style.css
+++ b/BaiTapBuoi14/style.css
@@ -43,7 +43,6 @@ nav > ul > li:hover .sub-menu-lev2 {
   visibility: visible;
 }
 nav > ul > li > a {
-  text-decoration: none;
   color: #333333;
   font-weight: 600;
   font-size: 18px;
@@ -51,6 +50,7 @@ nav > ul > li > a {
   height: 100%;
   width: 100%;
   padding: 1rem;
+  text-decoration: none;
 }
 
 nav ul li > a > i {
@@ -60,6 +60,7 @@ nav ul li > a > i {
 
 nav > ul > li:hover > a {
   color: #d62828;
+  border-bottom: 0.165rem solid #d62828;
 }
 
 .sub-menu-lev1 {
@@ -69,7 +70,7 @@ nav > ul > li:hover > a {
   position: absolute;
   top: 100%;
   width: 12rem;
-  left: 2rem;
+  left: 0rem;
   border: 1px solid #dddddd;
   z-index: 1;
   background-color: #ffffff;
@@ -84,7 +85,7 @@ nav > ul > li:hover > a {
 .sub-menu-lev2 > li:hover {
   background-color: #f5f5f5;
 }
-.sub-menu-lev2 > li > a:hover {
+.sub-menu-lev2 > li:hover > a {
   color: #d62828;
 }
 .sub-menu-lev2 > li > a {
