--- a/BaiTapBuoi17/assets/style.css
+++ b/BaiTapBuoi17/assets/style.css
@@ -8,6 +8,9 @@ body {
 a {
   text-decoration: none;
 }
+.box-container {
+  overflow: hidden;
+}
 .header {
   width: 100%;
   max-width: 1860px;
@@ -15,6 +18,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+  padding: 10px;
 }
 
 .top-banner {
@@ -153,6 +157,7 @@ a {
   border: 1px solid #f1f1f3;
   border-radius: 11px;
   position: relative;
+  margin-top: 60px;
 }
 .top-hero-section svg {
   position: absolute;
@@ -440,10 +445,12 @@ a {
   border-radius: 12px;
   border: 1px solid #f1f1f3;
   background-color: #ffffff;
+  min-height: 614px;
+  position: relative;
 }
 .item-course img {
   width: 100%;
-  max-height: 272px;
+  height: 272px;
   object-fit: cover;
   border-radius: 8px;
 }
@@ -489,6 +496,13 @@ a {
 }
 .btn-course {
   margin-top: 20px;
+  position: absolute;
+  width: 100%;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .btn-course button {
@@ -526,6 +540,8 @@ a {
   width: calc((100% - 20px) / 2);
   border: 1px solid #f1f1f3;
   border-radius: 12px;
+  position: relative;
+  min-height: 300px;
 }
 .item-ttm p {
   padding: 50px;
@@ -558,6 +574,9 @@ a {
   align-items: center;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
 .ttm-inf img {
   width: 60px;
@@ -767,9 +786,6 @@ a {
   border: 1px solid #f1f1f3;
   background-color: #ffffff;
   border-radius: 12px;
-}
-.card-faq:not(:first-child) {
-  margin-top: 30px;
 }
 .card-faq-heading {
   display: flex;
@@ -1056,4 +1072,167 @@ footer > p {
   font-size: 16px;
   line-height: 150%;
   color: #656567;
+}
+.main {
+  padding: 0 30px;
+}
+/* * * Thiet bi Table & Mobile: @media screen and (max-width: 991px) * * */
+@media screen and (max-width: 991px) {
+  .item-course img {
+    height: 240px;
+  }
+
+  .sub-course-inf > div > span {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1025px) {
+  .item-course img {
+    height: 240px;
+  }
+  .text-benefit p:last-child {
+    font-size: 14px;
+    text-align: justify;
+  }
+
+  .sub-course-inf > div > span {
+    font-size: 14px;
+  }
+  .text-benefit p strong {
+    font-size: 38px;
+  }
+  .container-benefit-section p b {
+    font-size: 18px;
+  }
+  .text-item-course p:first-child strong {
+    font-size: 20px;
+  }
+  .sub-course-inf > span {
+    font-size: 16px;
+  }
+  .btn-course button {
+    font-size: 14px;
+  }
+  .container-benefit-section .item-benefit {
+    min-height: 340px;
+  }
+}
+/*  * * Thiet bi rieng Table: @media screen and (min-width: 768px) and (max-width: 991px) * * */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .item-course img {
+    height: 240px;
+  }
+  .sub-course-inf > div > span {
+    font-size: 14px;
+  }
+  .top-banner--desc {
+    font-size: 14px;
+  }
+  .nav ul li a {
+    font-size: 14px;
+  }
+  .nav__btn-item {
+    font-size: 14px;
+  }
+  .top-hero-section h1 {
+    font-size: 36px;
+  }
+  .text-hero-section p:first-child {
+    font-size: 28px;
+  }
+  .text-hero-section p:last-child {
+    font-size: 16px;
+  }
+  .hero-section-btn-item {
+    font-size: 14px;
+  }
+  .sub-course-inf > div > span {
+    font-size: 12px;
+    padding: 10px 5px;
+  }
+  .sub-course-inf > span {
+    font-size: 14px;
+  }
+  .item-course {
+    min-height: 660px;
+    padding: 40px;
+  }
+  .btn-course {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .list-course {
+    gap: 10px;
+  }
+  .item-course {
+    width: calc((100% - 10px) / 2);
+  }
+  .container-benefit-section .list-benefit {
+    gap: 5px;
+  }
+  .container-benefit-section .item-benefit {
+    width: calc((100% - 10px) / 3);
+  }
+  .list-ttm {
+    gap: 10px;
+  }
+  .item-ttm {
+    width: calc((100% - 10px) / 2);
+    min-height: 310px;
+  }
+  .item-ttm p {
+    padding: 40px;
+  }
+  .ttm-inf img {
+    width: 50px;
+    height: 50px;
+  }
+  .ttm-user span b {
+    font-size: 16px;
+  }
+  .ttm-inf button {
+    padding: 10px 12px;
+    font-size: 14px;
+  }
+  .ttm-inf {
+    padding: 24px 40px;
+  }
+  .btn-pricing button {
+    padding: 12px 24px;
+    font-size: 14px;
+  }
+  .container-pricing {
+    padding: 50px 20px;
+  }
+  .item-pricing {
+    padding: 40px 16px 24px 16px;
+    width: calc((100% - 14px) / 2);
+  }
+  .container-pricing {
+    gap: 14px;
+  }
+  .box-features {
+    padding: 20px 10px;
+  }
+  .list-features {
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+  .box-features p:first-child {
+    font-size: 18px;
+  }
+  .item-features {
+    gap: 8px;
+  }
+  .item-features-icon {
+    font-size: 12px;
+  }
+  .item-features-text {
+    font-size: 12px;
+  }
+}
+
+/* * * Thiet bi Mobile: @media screen and (max-width: 767px) * * */
+@media screen and (max-width: 767px) {
 }
